--- a/.cycloid.yml
+++ b/.cycloid.yml
@@ -2,10 +2,10 @@
 ---
 version: '2'
 name: 'k8s managed stacks '
-canonical: 'k8s-stacks'
+canonical: 'stack-kubernetes'
 status: 'public'
 description: |
-  This stack allows to deploy a chosen k8s managed service in one of the available providers.
+  This stack allows to deploy a chosen kubernetes managed service in one of the available providers.
 keywords:
   - 'kubernetes'
   - 'k8s'
@@ -19,31 +19,28 @@ keywords:
   - 'provider:scw'
 author: 'Cycloid'
 image: 'https://raw.githubusercontent.com/marcoldp/k8s-stack/main/docs/k8s-logo.png'
-# technologies:
-#   - technology: Google Kubernetes Engine
-#     version: latest
-#   - technology: Container-Optimized OS
-#     version: latest
-#   - technology: Scaleway Kubernetes Kapsule
-#     version: 1.19
-#   - technology: Azure Kubernetes Service
-#     version: latest
-#   - technology: Amazon Elastic Kubernetes Service
-#     version: 1.16
-#   - technology: Amazon EKS-Optimized AMI
-#     version: 1.16
+technologies:
+   - technology: GCP
+     version: n/a
+   - technology: Azure
+     version: n/a
+   - technology: AWS
+     version: n/a
+   - technology: Scaleway
+     version: n/a
 
 config:
   # define the default environment for aws
   aws-eks:
     name: 'aws-eks'
     description: 'Creates Amazon Elastic K8s Service cluster (EKS) in dedicated VPC with 1+ node groups'
+    cloud_provider: aws
     # Configuration of the CI pipeline
     pipeline:
       pipeline:
         path: 'pipeline/aws-eks.yml'
       variables:
-        path: 'pipeline/aws-eks.sample.yml'
+        path: 'pipeline/variables.aws-eks.sample.yml'
         destination: '($ project $)/pipeline/variables-($ environment $).yml'
     # Configuration of terraform to setup the infrastructure
     terraform:
@@ -54,13 +51,14 @@ config:
   # define the default environment for azure
   azure-aks:
     name: 'azure-aks'
+    cloud_provider: azurerm
     description: 'Creates Azure K8s Service (AKS) in dedicated VPC with 1+ node pools'
     # Configuration of the CI pipeline
     pipeline:
       pipeline:
         path: 'pipeline/azure-aks.yml'
       variables:
-        path: 'pipeline/azure-aks.sample.yml'
+        path: 'pipeline/variables.azure-aks.sample.yml'
         destination: '($ project $)/pipeline/variables-($ environment $).yml'
     # Configuration of terraform to setup the infrastructure
     terraform:
@@ -71,13 +69,14 @@ config:
   # define the default environment for google 
   gcp-gke:
     name: 'gcp-gke'
+    cloud_provider: google
     description: 'Creates Google Kubernetes Engine (GKE) in dedicated newtork cluster with 1+ node pools'
     # Configuration of the CI pipeline
     pipeline:
       pipeline:
         path: 'pipeline/gcp-gke.yml'
       variables:
-        path: 'pipeline/gcp-gke.sample.yml'
+        path: 'pipeline/variables.gcp-gke.sample.yml'
         destination: '($ project $)/pipeline/variables-($ environment $).yml'
     # Configuration of terraform to setup the infrastructure
     terraform:
@@ -88,13 +87,14 @@ config:
   # define the default environment for kapsule 
   scaleway-kapsule:
     name: 'scaleway-kapsule'
+    cloud_provider: scaleway
     description: 'Creates Scaleway Kubernetes Kapsule cluster with 1+ node pools'
     # Configuration of the CI pipeline
     pipeline:
       pipeline:
         path: 'pipeline/scaleway-kapsule.yml'
       variables:
-        path: 'pipeline/scaleway-kapsule.sample.yml'
+        path: 'pipeline/variables.scaleway-kapsule.sample.yml'
         destination: '($ project $)/pipeline/($ environment $)/variables.yml'
     # Configuration of terraform to setup the infrastructure
     terraform:
