--- a/pipeline/variables.azure-aks.sample.yml
+++ b/pipeline/variables.azure-aks.sample.yml
@@ -97,6 +97,7 @@ project: ($ project $)
 #. customer (required): ($ organization_canonical $)
 #+ Name of the Cycloid Organization, used as customer variable name.
 customer: ($ organization_canonical $)
+organization: ($ organization_canonical $)
 
 #. stack_git_branch (required): master
 #+ Branch to use on the public stack Git repository
@@ -106,6 +107,6 @@ stack_git_branch: main
 #+ Path of Terraform files in the config git repository
 config_terraform_path: ($ project $)/terraform/($ environment $)
 
-#. terraform_version (required): '0.12.21'
+#. terraform_version (required): '1.0.4'
 #+ terraform version used to execute your code.
-terraform_version: '0.12.21'
+terraform_version: '1.0.4'
