--- a/pipeline/variables.gcp-gke.sample.yml
+++ b/pipeline/variables.gcp-gke.sample.yml
@@ -2,33 +2,32 @@
 # Terraform
 #
 
-# Amazon access to use to run terraform. Usually admin account to be able to create Amazon services.
+# Google access to use to run terraform. Usually admin service account to be able to create Google services.
 
-#. aws_access_key (required): ((aws.access_key))
-#+ Amazon AWS access key for Terraform. See value format [here](https://docs.cycloid.io/advanced-guide/integrate-and-use-cycloid-credentials-manager.html#vault-in-the-pipeline)
-aws_access_key: ((aws.access_key))
+#. gcp_credentials_json (required): ((gcp.json_key))
+#+ Google Cloud Platform credentials JSON for Terraform. See value format [here](https://docs.cycloid.io/advanced-guide/integrate-and-use-cycloid-credentials-manager.html#vault-in-the-pipeline)
+gcp_credentials_json: ((gcp.json_key))
 
-#. aws_secret_key (required): ((aws.secret_key))
-#+ Amazon AWS secret key for Terraform. See value format [here](https://docs.cycloid.io/advanced-guide/integrate-and-use-cycloid-credentials-manager.html#vault-in-the-pipeline)
-aws_secret_key: ((aws.secret_key))
+#. gcp_project (required): ($ project $)
+#+ Google Cloud Platform project to use for Terraform.
+gcp_project: ($ project $)
 
-#. aws_default_region (required): eu-west-1
-#+ Amazon AWS region to use for Terraform.
-aws_default_region: eu-west-1
+#. gcp_region (required): europe-west1
+#+ Google Cloud Platform region to use for Terraform.
+gcp_region: europe-west1
 
 #. terraform_storage_bucket_name (required): ($ organization_canonical $)-terraform-remote-state
-#+ AWS S3 bucket name to store terraform remote state file.
+#+ Google Cloud Storage bucket name to store terraform remote state file.
 terraform_storage_bucket_name: ($ organization_canonical $)-terraform-remote-state
-
 
 
 #
 # Repos
 #
 
-#. config_git_repository (required): git@github.com:MyUser/config.git
+#. config_git_repository (required): git@github.com:MyUser/config-gke.git
 #+ Git repository URL containing the config of the stack.
-config_git_repository: git@github.com:MyUser/config.git
+config_git_repository: git@github.com:MyUser/config-gke.git
 
 #. config_git_branch (required): master
 #+ Branch of the config Git repository.
@@ -54,16 +53,16 @@ project: ($ project $)
 #. customer (required): ($ organization_canonical $)
 #+ Name of the Cycloid Organization, used as customer variable name.
 customer: ($ organization_canonical $)
+organization: ($ organization_canonical $)
 
 #. stack_git_branch (required): master
 #+ Branch to use on the public stack Git repository
-## TO CHANGE -MAIN
 stack_git_branch: main
 
 #. config_terraform_path (required): ($ project $)/terraform/($ environment $)
 #+ Path of Terraform files in the config git repository
 config_terraform_path: ($ project $)/terraform/($ environment $)
 
-#. terraform_version (required): '0.12.28'
+#. terraform_version (required): '1.0.4'
 #+ terraform version used to execute your code.
-terraform_version: '0.12.28'
+terraform_version: '1.0.4'
