--- a/pipeline/variables.aws-eks.sample.yml
+++ b/pipeline/variables.aws-eks.sample.yml
@@ -59,7 +59,7 @@ organization: ($ organization_canonical $)
 #. stack_git_branch (required): master
 #+ Branch to use on the public stack Git repository
 ## TO CHANGE -MAIN
-stack_git_branch: main
+stack_git_branch: master
 
 #. config_terraform_path (required): ($ project $)/terraform/($ environment $)
 #+ Path of Terraform files in the config git repository
