terraform/aws-eks: add eks_admin_iam_role_arn variable to allow mapping a custom IAM role to the system:masters group within the Kubernetes cluster

--- a/terraform/aws-eks/eks.tf.sample
+++ b/terraform/aws-eks/eks.tf.sample
@@ -125,7 +125,10 @@ module "eks" {
   #+ EKS cluster enabled log types.
 
   #. control_plane_allowed_ips (optional): ["0.0.0.0/0"]
-  #+ Allow Inbound IP CIDRs to access the Kubernetes API. 
+  #+ Allow Inbound IP CIDRs to access the Kubernetes API.
+
+  #. eks_admin_iam_role_arn (optional): ""
+  #+ AWS IAM role ARN to map as system:masters within the Kubernetes cluster. By default, a default arbitrary role called 'admin' will be allowed.
 
   ###
   # Required (should probably not be touched)
