--- a/.forms.yml
+++ b/.forms.yml
@@ -106,6 +106,12 @@ aws-eks:
         type: array
         default:
             - "0.0.0.0/0"
+      - name: "AWS IAM role ARN to map as admin"
+        description: "AWS IAM role ARN to map as system:masters within the Kubernetes cluster. By default, a default arbitrary role called 'admin' will be allowed."
+        key: module.eks.eks_admin_iam_role_arn
+        widget: simple_text
+        type: string
+        default: ""
 
     eks-node:
       - name: "SSH keypair"
@@ -220,7 +226,7 @@ aws-eks:
 azure-aks:
   pipeline:
     Terraform:
-      - name: "Azure Subscription ID" 
+      - name: "Azure Subscription ID"
         description: "Azure subscription ID to use for Terraform."
         key: azure_subscription_id
         widget: cy_cred
@@ -237,20 +243,20 @@ azure-aks:
         key: azure_client_id
         widget: cy_cred
         type: string
-        default: "((azure_admin.client_id))"    
+        default: "((azure_admin.client_id))"
       - name: "Azure Client Secret"
         description: "Azure Client Secret to use for Terraform."
         key: azure_client_secret
         widget: cy_cred
         type: string
-        default: "((azure_admin.client_secret))" 
+        default: "((azure_admin.client_secret))"
       - name: "Azure Location"
         description: "Azure location to use for Terraform."
         key: azure_location
         widget: auto_complete
         type: string
         values: ["North Europe","West Europe","France Central","France South"]
-        default: "West Europe" 
+        default: "West Europe"
       - name: "Azure Resource Group of the Storage Account"
         description: "Azure Resource Group of the Storage Account to use to store terraform remote state file."
         key: terraform_resource_group_name
@@ -319,7 +325,7 @@ azure-aks:
         description: "The branch used by the config repository"
         source: config_git_repository
         default: "master"
-        required: true  
+        required: true
 
   terraform:
     config:
@@ -335,7 +341,7 @@ azure-aks:
         widget: simple_text
         type: string
         default: "($ project $)-($ environment $)"
-        
+
     vpc:
       - name: "Address Space"
         description: "The virtual network address space."
@@ -533,7 +539,7 @@ scaleway-kapsule:
         widget: auto_complete
         type: string
         values: ["fr-par","nl-ams","pl-waw"]
-        default: fr-par        
+        default: fr-par
       - name: "Terraform storage bucket"
         description: "Object Storage Bucket name to store terraform remote state file."
         key: terraform_storage_bucket_name
@@ -574,7 +580,7 @@ scaleway-kapsule:
         widget: simple_text
         type: string
         default: "($ project $)-($ environment $)"
- 
+
     kapsule:
       - name: "Cluster version"
         description: "Kapsule cluster version."
@@ -627,7 +633,7 @@ scaleway-kapsule:
             - "monday"
             - "tuesday"
             - "wednesday"
-            - "thursday" 
+            - "thursday"
             - "friday"
             - "saturday"
             - "sunday"
@@ -732,7 +738,7 @@ scaleway-nodes:
         widget: auto_complete
         type: string
         values: ["fr-par","nl-ams","pl-waw"]
-        default: fr-par        
+        default: fr-par
       - name: "Terraform storage bucket"
         description: "Object Storage Bucket name to store terraform remote state file."
         key: terraform_storage_bucket_name
@@ -836,7 +842,7 @@ scaleway-nodes:
         key: module.node_pool.placement_group_id
         widget: simple_text
         type: string
-        default: ""      
+        default: ""
       - name: "Extra tags"
         description: "Dict of extra tags to add on the pool."
         key: module.node_pool.extra_tags
