terraform/aws-eks: redefined spot instance default options based on the default values set by the AWS console when spawing a new nodegroup

--- a/.forms.yml
+++ b/.forms.yml
@@ -210,12 +210,18 @@ aws-eks:
         values:
              - "ondemand"
              - "spot"
-      - name: "Spot price"
-        description: "EKS nodes spot price when `node_market_type = spot`."
+      - name: "Spot instance request type"
+        description: "EKS nodes spot request type when `node_market_type = spot`. Can be either `one-time`, `persistent` or left undefined."
+        key: module.eks-node.node_spot_request_type
+        widget: simple_text
+        type: string
+        default: ""
+      - name: "Spot instance max price"
+        description: "EKS nodes max spot price when `node_market_type = spot`. Undefined by default."
         key: module.eks-node.node_spot_price
         widget: simple_text
         type: string
-        default: "0.3"
+        default: ""
       - name: "Enable Cluster Autoscaler"
         description: "Should be true to add Cluster Autoscaler ASG tags."
         key: module.eks-node.node_enable_cluster_autoscaler_tags
