--- a/pipeline/variables.scaleway-kapsule.sample.yml
+++ b/pipeline/variables.scaleway-kapsule.sample.yml
@@ -20,6 +20,8 @@ scw_secret_key: ((scaleway.secret_key))
 #+ Scaleway region to use for Terraform.
 scw_default_region: fr-par
 
+scw_project_id:
+
 #. terraform_storage_bucket_name (required): ($ organization_canonical $)-terraform-remote-state
 #+ AWS S3 bucket name to store terraform remote state file.
 terraform_storage_bucket_name: ($ organization_canonical $)-terraform-remote-state
@@ -68,4 +70,4 @@ config_terraform_path: ($ project $)/terraform/($ environment $)
 
 #. terraform_version (required): '0.13.3'
 #+ terraform version used to execute your code.
-terraform_version: '1.0.4'
+terraform_version: '1.7.0'
